force-app/main/default/objects/Account/fields/Chances_of_long_term_partnership__c.field-meta.xml
<CustomField>
    <fullName>Chances_of_long_term_partnership__c</fullName>
    <description>The previous name was Lifetime Partnership Score</description>
    <label>Partner Satisfaction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>