force-app/main/default/objects/Account/fields/Cleansing_Program__c.field-meta.xml
<CustomField>
    <fullName>Cleansing_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if client is running a cleansing program during the month</inlineHelpText>
    <label>Cleansing Program</label>
    <type>Checkbox</type>
</CustomField>