force-app/main/default/objects/Account/fields/Client_Appt_Status_Updated_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Client_Appt_Status_Updated_This_Month__c</fullName>
    <label>Client Appt Status Updated This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>