force-app/main/default/objects/Account/fields/Client_Cell_Number_for_SMS_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Cell_Number_for_SMS_2__c</fullName>
    <description>This is to be used if a client wants multiple people to be contacted.</description>
    <inlineHelpText>This is to be used if a client wants multiple people to be contacted.</inlineHelpText>
    <label>Client Cell Number for SMS 2</label>
    <type>Phone</type>
</CustomField>