force-app/main/default/objects/Account/fields/Client_Cell_Number_for_SMS__c.field-meta.xml
<CustomField>
    <fullName>Client_Cell_Number_for_SMS__c</fullName>
    <label>Client Cell Number for SMS</label>
    <type>Phone</type>
</CustomField>