force-app/main/default/objects/Account/fields/Client_Definition_of_Success__c.field-meta.xml
<CustomField>
    <fullName>Client_Definition_of_Success__c</fullName>
    <label>Client Definition of Success</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>