force-app/main/default/objects/Account/fields/Client_Engagement_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Client_Engagement_This_Month__c</fullName>
    <formula>IF(OR(Client_Appt_Status_Updated_This_Month__c&gt;0,Client_Scorecards_This_Month__c&gt;0),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Engagement This Month</label>
    <type>Checkbox</type>
</CustomField>