force-app/main/default/objects/Account/fields/Client_Integration_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Integration_User_Id__c</fullName>
    <description>This is the user in the client&apos;s CRM that data needs to be assigned to</description>
    <inlineHelpText>This is the user in the client&apos;s CRM that data needs to be assigned to</inlineHelpText>
    <label>Client Integration User Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>