force-app/main/default/objects/Account/fields/Client_Override_Appointment_Window__c.field-meta.xml
<CustomField>
    <fullName>Client_Override_Appointment_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will override the requirement of setting appointments within 2 weeks</description>
    <label>Client Override Appointment Window</label>
    <type>Checkbox</type>
</CustomField>