force-app/main/default/objects/Account/fields/Client_Preferred_Resources__c.field-meta.xml
<CustomField>
    <fullName>Client_Preferred_Resources__c</fullName>
    <description>Used on Agency layout / by Marketing Services team</description>
    <label>Client Preferred Resources</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>