force-app/main/default/objects/Account/fields/Client_Published_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Client_Published_Calendar__c</fullName>
    <inlineHelpText>Populate the client&apos;s published calendar here.  It will be pulled into the Dialer page</inlineHelpText>
    <label>Client Published Calendar</label>
    <type>Url</type>
</CustomField>