force-app/main/default/objects/Account/fields/Client_Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Client_Renewed_Contract__c</fullName>
    <formula>OR(
	AND(
		ISPICKVAL(Status__c, &quot;Canceled&quot;),
		  Number_of_Days_Before_Cancel__c &gt; 365 ),
	AND(
		ISPICKVAL(Status__c, &quot;Active&quot;),
		  Number_of_Days_Live__c &gt; 365 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Renewed Contract</label>
    <type>Checkbox</type>
</CustomField>