force-app/main/default/objects/Account/fields/Client_Scorecard_Avg_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Client_Scorecard_Avg_This_Month__c</fullName>
    <description>This field is populated by a nightly batch process and represents the average score of client scorecards associated with this account which have a Completed Date this month (based on the Current Contract Calling Start Date, whichever is later)</description>
    <inlineHelpText>This field is populated by a nightly batch process and represents the average score of client scorecards associated with this account which have a Completed Date this month (based on the Current Contract Calling Start Date, whichever is later)</inlineHelpText>
    <label>Client Scorecard Avg This Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>