force-app/main/default/objects/Account/fields/Client_Scorecards_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Client_Scorecards_This_Month__c</fullName>
    <description>This field is populated by a nightly batch process and represents the total number of client scorecards associated with this account which have a Completed Date this month (or based on the Current Contract Calling Start Date, whichever is later)</description>
    <inlineHelpText>This field is populated by a nightly batch process and represents the total number of client scorecards associated with this account which have a Completed Date this month (or based on the Current Contract Calling Start Date, whichever is later)</inlineHelpText>
    <label>Client Scorecards This Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>