force-app/main/default/objects/Account/fields/Client_Scored_a_Call__c.field-meta.xml
<CustomField>
    <fullName>Client_Scored_a_Call__c</fullName>
    <description>Used to show whether a client graded either a NAC or an Appointment call for current month.</description>
    <inlineHelpText># of completed Client Non-Appointment or Client Appointment scorecards this month.</inlineHelpText>
    <label>Client Scored a Call</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>