force-app/main/default/objects/Account/fields/Client_Scored_a_Call_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Client_Scored_a_Call_This_Month__c</fullName>
    <formula>IF(  Client_Scorecards_This_Month__c &gt;0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows if a client completed a Non-Appointment or Appointment Scorecard  this month.</inlineHelpText>
    <label>Client Scored a Call This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>