force-app/main/default/objects/Account/fields/Cold_Calling_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cold_Calling_Start_Date__c</fullName>
    <label>Cold Calling Start Date</label>
    <type>Date</type>
</CustomField>