force-app/main/default/objects/Account/fields/Collections_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Collections_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1kbL</relationshipName>
    <type>Lookup</type>
</CustomField>