force-app/main/default/objects/Account/fields/Comp_Cleansed_This_Month_No_Overage__c.field-meta.xml
<CustomField>
    <fullName>Comp_Cleansed_This_Month_No_Overage__c</fullName>
    <formula>IF(Data_Collection_Completed_Current_Month__c&gt; Data_Collection_Goal_Formula__c  ,Data_Collection_Goal_Formula__c , Data_Collection_Completed_Current_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prorated to Data Collection Goal Formula when Company Cleansed Completed Current Month is greater than Data Collection Goal Formula, otherwise Company Cleansed Completed Current Month.</inlineHelpText>
    <label>Comp. Cleansed This Month - No Overage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>