force-app/main/default/objects/Account/fields/Companies_Qualified_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Companies_Qualified_Current_Month__c</fullName>
    <description>Used to the Business Report - Populate the number of companies that have the Qualified box check in current month</description>
    <label>Companies Qualified Current Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>