force-app/main/default/objects/Account/fields/Companies_Qualified_Goal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Companies_Qualified_Goal_Formula__c</fullName>
    <description>Goal is prorated by 25% if cleansing program checkbox on the account page isnt true or Companies Cleansed isnt an additional guarantee, % to Appt Goal Actual is at least 100%</description>
    <formula>IF
(AND
(OR( Cleansing_Program__c = False,
NOT(INCLUDES(Additional_Guarantees__c,&quot;Companies Cleansed&quot;))),
to_Appt_Goal_Actual__c &gt;= 1), Monthly_Companies_Qualified_Goal__c *(75/100),Monthly_Companies_Qualified_Goal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Goal is prorated by 25% if cleansing program checkbox on the account page isnt true or Companies Cleansed isnt an additional guarantee, % to Appt Goal Actual is at least 100%</inlineHelpText>
    <label>Companies Qualified Goal Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>