force-app/main/default/objects/Account/fields/Companies_Qualified_MTD_No_Overage__c.field-meta.xml
<CustomField>
    <fullName>Companies_Qualified_MTD_No_Overage__c</fullName>
    <description>Number or companies qualified this month or the company qualified goal formula when the number of companies qualified exceeds the company qualified goal formula</description>
    <formula>IF( Companies_Qualified_Current_Month__c &gt; Companies_Qualified_Goal_Formula__c ,Companies_Qualified_Goal_Formula__c,Companies_Qualified_Current_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Companies Qualified MTD - No Overage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>