force-app/main/default/objects/Account/fields/Companies_Qualified_This_Contract__c.field-meta.xml
<CustomField>
    <fullName>Companies_Qualified_This_Contract__c</fullName>
    <description>The number of Company Account records marked true and a qualified date within the account pages current and end contract date field values.</description>
    <label>Companies Qualified This Contract</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>