force-app/main/default/objects/Account/fields/Companies_Qualified_Today__c.field-meta.xml
<CustomField>
    <fullName>Companies_Qualified_Today__c</fullName>
    <label>Companies Qualified Today</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>