force-app/main/default/objects/Account/fields/Company_Cleansed_This_Contract__c.field-meta.xml
<CustomField>
    <fullName>Company_Cleansed_This_Contract__c</fullName>
    <description>Number of company&apos;s cleansed during current contract</description>
    <label>Company Cleansed This Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>