force-app/main/default/objects/Account/fields/Contacts_Moved_to_Intro_1_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Moved_to_Intro_1_This_Month__c</fullName>
    <label>Contacts Moved to Intro 1 This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>