force-app/main/default/objects/Account/fields/Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>Content_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Marketing Copywriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accountso1hX</relationshipName>
    <type>Lookup</type>
</CustomField>