force-app/main/default/objects/Account/fields/Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Comments__c</fullName>
    <description>This field is to annotate unique comments from the contract</description>
    <label>Contract Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>