force-app/main/default/objects/Account/fields/Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration__c</fullName>
    <formula>Contract_End_Date__c - Current_Contract_Calling_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>