force-app/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>According to the contract, what is the last day covered in the agreement.</description>
    <inlineHelpText>According to the contract, what is the last day covered in the agreement.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>