force-app/main/default/objects/Account/fields/Contract_Out_Clause__c.field-meta.xml
<CustomField>
    <fullName>Contract_Out_Clause__c</fullName>
    <description>Track the timeline of when a client can put in its cancellation.</description>
    <label>Contract Out Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Out_Clause</valueSetName>
    </valueSet>
</CustomField>