force-app/main/default/objects/Account/fields/Contract_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer_Email__c</fullName>
    <description>This is used to compare the Main POC, the appointment contact, and the contract signer to help Abstrakt evaluate who is all involved in the decision making process with our clients.</description>
    <label>Contract Signer Email</label>
    <type>Email</type>
</CustomField>