force-app/main/default/objects/Account/fields/Contractual_Monthly_Word_Count_Goal__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Monthly_Word_Count_Goal__c</fullName>
    <label>Contractual Monthly Word Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>