force-app/main/default/objects/Account/fields/Conversions_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Conversions_This_Month__c</fullName>
    <label>Conversions This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>