force-app/main/default/objects/Account/fields/Copywriter__c.field-meta.xml
<CustomField>
    <fullName>Copywriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copywriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsLIFG</relationshipName>
    <type>Lookup</type>
</CustomField>