force-app/main/default/objects/Account/fields/Create_Partner_User_Account_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Create_Partner_User_Account_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to automatically create partner account team members</description>
    <label>Create Partner User Account Team Member</label>
    <type>Checkbox</type>
</CustomField>