force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <inlineHelpText>This identifies the CRM a client currently uses. 

Any values marked with an * can be used as part of the standard integration</inlineHelpText>
    <label>CRM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <label>Salesforce*</label>
            </value>
            <value>
                <fullName>Hubspot</fullName>
                <label>Hubspot*</label>
            </value>
            <value>
                <fullName>Zoho</fullName>
                <label>Zoho*</label>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
                <label>Microsoft Dynamics*</label>
            </value>
            <value>
                <fullName>ACT!</fullName>
            </value>
            <value>
                <fullName>Adobe Systems</fullName>
            </value>
            <value>
                <fullName>AutoAlert</fullName>
            </value>
            <value>
                <fullName>Auto Mastermind</fullName>
            </value>
            <value>
                <fullName>Autotask</fullName>
            </value>
            <value>
                <fullName>Connectwise</fullName>
            </value>
            <value>
                <fullName>Contact Manager</fullName>
            </value>
            <value>
                <fullName>Cosential</fullName>
            </value>
            <value>
                <fullName>Dealer Socket</fullName>
            </value>
            <value>
                <fullName>eLead</fullName>
            </value>
            <value>
                <fullName>Freshworks</fullName>
            </value>
            <value>
                <fullName>InfusionSoft</fullName>
            </value>
            <value>
                <fullName>Insightly</fullName>
            </value>
            <value>
                <fullName>IQvia</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>No CRM</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PegaSystems</fullName>
            </value>
            <value>
                <fullName>Pipedrive</fullName>
            </value>
            <value>
                <fullName>PipelineDeals</fullName>
            </value>
            <value>
                <fullName>Red Bumper</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>VIN Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>