force-app/main/default/objects/Account/fields/CRM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CRM_Notes__c</fullName>
    <label>CRM Notes</label>
    <type>TextArea</type>
</CustomField>