force-app/main/default/objects/Account/fields/Cumulative_Layout_Shift__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Layout_Shift__c</fullName>
    <description>Pulled from the field Cumulative Layout Shift on Website Performance most recent record.</description>
    <label>Cumulative Layout Shift</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>