force-app/main/default/objects/Account/fields/Current_Addendum_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_Addendum_URL__c</fullName>
    <label>Current Addendum URL</label>
    <type>Url</type>
</CustomField>