force-app/main/default/objects/Account/fields/Current_Contract_Calling_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Calling_Start_Date__c</fullName>
    <description>The Calling Start Date of the most recent contract/addendum, this will be used to project/adjust monthly appointment goals</description>
    <inlineHelpText>The Calling Start Date of the most recent contract/addendum,  this will be used to project/adjust monthly appointment goals</inlineHelpText>
    <label>Current Contract Calling Start Date</label>
    <type>Date</type>
</CustomField>