force-app/main/default/objects/Account/fields/Current_Perfect_Appointment_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Current_Perfect_Appointment_Sheet__c</fullName>
    <label>Client Information Document</label>
    <type>Url</type>
</CustomField>