force-app/main/default/objects/Account/fields/Current_PSR__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>AMG: Sales Development Rep ; Sapper: Partner Delivery Manager</inlineHelpText>
    <label>Delivery Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>