force-app/main/default/objects/Account/fields/Current_PSR_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR_Go_Live_Date__c</fullName>
    <formula>Current_PSR__r.Employee_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Owner Go Live Date</label>
    <type>Date</type>
</CustomField>