force-app/main/default/objects/Account/fields/Current_PSR_is_a_PAM__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR_is_a_PAM__c</fullName>
    <description>This is used to complete PAM A-Player Scores</description>
    <formula>OR(
Current_PSR__r.Profile.Name = &apos;Partner Account Manager&apos;,
Current_PSR__r.Profile.Name = &apos;Partner Account Manager: Beta Tester&apos;,
Current_PSR__r.Profile.Name = &apos;Partner Account Manager -- New Dialer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Owner is a PAM</label>
    <type>Checkbox</type>
</CustomField>