force-app/main/default/objects/Account/fields/Current_PSR_is_PPM__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR_is_PPM__c</fullName>
    <formula>Current_PSR__r.Profile.Name =&apos;Partner Performance Manager&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Owner is PPM</label>
    <type>Checkbox</type>
</CustomField>