force-app/main/default/objects/Account/fields/Current_PSR_Months_Active__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR_Months_Active__c</fullName>
    <label>Current Delivery Owner Months Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>