force-app/main/default/objects/Account/fields/Current_PSR_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR_Name__c</fullName>
    <formula>Current_PSR__r.FirstName + &apos; &apos; + Current_PSR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Owner Name</label>
    <type>Text</type>
</CustomField>