force-app/main/default/objects/Account/fields/Data_Collection_Completed_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Completed_Current_Month__c</fullName>
    <label>Company Cleansed Completed Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>