force-app/main/default/objects/Account/fields/Data_Collection_Completed_Today__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Completed_Today__c</fullName>
    <description>approved by Kristin harris to create on 7-2-19 verbally with Nick W.</description>
    <label>Company Cleansed Completed Today</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>