force-app/main/default/objects/Account/fields/Data_Collection_Goal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Goal_Formula__c</fullName>
    <formula>IF 
(AND 
(OR( Cleansing_Program__c = False,  
NOT(INCLUDES(Additional_Guarantees__c,&quot;Companies Cleansed&quot;))),  
to_Appt_Goal_Actual__c &gt;= 1),  Monthly_Data_Collection_Goal__c  *(50/100),Monthly_Data_Collection_Goal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Company Cleansed Goal is prorated 50% when there isn&apos;t a company cleansed guarantee, % to Appt Goal Actual is at least 100%.</inlineHelpText>
    <label>Company Cleansed Goal Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>