force-app/main/default/objects/Account/fields/Definition_of_Success_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Success_Last_Modified__c</fullName>
    <description>Updates to date the field Client Definition of Success was last changed.</description>
    <label>Definition of Success Last Modified</label>
    <type>Date</type>
</CustomField>