force-app/main/default/objects/Account/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to help accounting Track if they have made an initial deposit.</description>
    <inlineHelpText>Was there a deposit made from the Client?</inlineHelpText>
    <label>Deposit</label>
    <type>Checkbox</type>
</CustomField>