force-app/main/default/objects/Account/fields/Dial_Goal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dial_Goal_Formula__c</fullName>
    <description>Lowers non-dial guarantees dial goal by 50%, when % to goal is at least 100%, and Monthly Appt Goal is less than 1 of the baseline goal.</description>
    <formula>IF(
   AND(NOT(ISPICKVAL(Appointment_Guarantee__c,&apos;Dials Only&apos;)),
		to_Appt_Goal_Actual__c  &gt;=  1),
	Monthly_Call_Goal__c*(50/100),Monthly_Call_Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lowers non-dial guarantees dial goal by 50%, when % to goal is at least 100%</inlineHelpText>
    <label>Dial Goal Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>