force-app/main/default/objects/Account/fields/Dial_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>Dial_to_Goal__c</fullName>
    <formula>Actual_Calls_This_Month__c / Monthly_Call_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial % to Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>