force-app/main/default/objects/Account/fields/Dials_to_Appt__c.field-meta.xml
<CustomField>
    <fullName>Dials_to_Appt__c</fullName>
    <description>Created by Nick Wulf on Jessica Rentel&apos;s computer</description>
    <label>Dials to Appt</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>