force-app/main/default/objects/Account/fields/Digital_Strategist__c.field-meta.xml
<CustomField>
    <fullName>Digital_Strategist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Strategist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsBESS</relationshipName>
    <type>Lookup</type>
</CustomField>