force-app/main/default/objects/Account/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AMG &amp; Sapper: Director of Partner Success</description>
    <inlineHelpText>AMG &amp; Sapper: Director of Partner Success</inlineHelpText>
    <label>Success Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsE3m8</relationshipName>
    <type>Lookup</type>
</CustomField>