force-app/main/default/objects/Account/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual No Cancel</fullName>
            </value>
            <value>
                <fullName>Annual True-Up</fullName>
            </value>
            <value>
                <fullName>Multi-Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid In Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>