force-app/main/default/objects/Account/fields/Discovered_Not_Indexed__c.field-meta.xml
<CustomField>
    <fullName>Discovered_Not_Indexed__c</fullName>
    <label>Discovered - Not Indexed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>