force-app/main/default/objects/Account/fields/Do_Not_Contact_List_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_List_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact List Uploaded</label>
    <type>Checkbox</type>
</CustomField>