force-app/main/default/objects/Account/fields/Do_Not_Email_List_Received__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email_List_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Email List Received</label>
    <type>Checkbox</type>
</CustomField>