force-app/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>IF(CONTAINS( Website,&quot;http://www.&quot;),RIGHT( Website, LEN(Website)- 11),
IF(CONTAINS(Website,&quot;https://www.&quot;),RIGHT( Website, LEN(Website)- 12),
IF(CONTAINS(Website,&quot;http://&quot;),RIGHT(Website, LEN(Website)- 7),
IF(CONTAINS(Website,&quot;https://&quot;),RIGHT(Website, LEN(Website)- 8),Website))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>