force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <formula>Associated_Opportunity__r.Contact__r.DUNS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DUNS</label>
    <type>Text</type>
</CustomField>