force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Client&apos;s email address</description>
    <label>Main Contact Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>