force-app/main/default/objects/Account/fields/Email_Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_End_Date__c</fullName>
    <label>Email Campaign End Date</label>
    <type>Date</type>
</CustomField>