force-app/main/default/objects/Account/fields/Email_Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_Start_Date__c</fullName>
    <description>Date the email campaign begins.</description>
    <label>Email Campaign Start Date</label>
    <type>Date</type>
</CustomField>