force-app/main/default/objects/Account/fields/Email_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact_Name__c</fullName>
    <label>Email Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>