force-app/main/default/objects/Account/fields/Email_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact_Title__c</fullName>
    <label>Email Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>