force-app/main/default/objects/Account/fields/Email_Marketing_Client__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Marketing Status</label>
    <type>Checkbox</type>
</CustomField>