force-app/main/default/objects/Account/fields/Email_Marketing_Client_PickList__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Client_PickList__c</fullName>
    <description>Identifies a clients decision to use email marketing.</description>
    <label>Email Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Campaign</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Cleansing Program</fullName>
            </value>
            <value>
                <fullName>No Data</fullName>
            </value>
            <value>
                <fullName>No Campaign</fullName>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Set-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>