force-app/main/default/objects/Account/fields/Email_Marketing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Email_Address__c</fullName>
    <label>Sender Mailbox Password</label>
    <length>80</length>
    <type>Text</type>
</CustomField>